infra-resources/argo-rollouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts

spec:
  parentRefs:
    - name: logbeacon-gateway
      namespace: logbeacon
      sectionName: https

  hostnames:
    - "rollouts.aws-logbeacon.iamridoydey.me"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: workload-argo-rollouts-dashboard
          port: 3100
